--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@ header {
 }
 
 h1 {
-	padding-top: 70px;
+	padding-top: 50px;
 	font-size: 2.4rem;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -82,6 +82,7 @@ h1 {
 
 h2 {
 	font-size: 1.8rem;
+	margin-bottom: 20px;
 }
 
 h1, h2, legend {
@@ -133,15 +134,61 @@ legend {
 }
 
 footer {
-	font-size: 0.5rem;
+	font-size: 0.6rem;
   text-align: center;
   margin-top: 50px;
   padding-bottom: 10px;
 }
 
 .results {
-	margin-top: 50px;
+	width: 80%;
+	margin-top: 20px;
 	margin-bottom: 50px;
+	margin-right: auto;
+	margin-left: auto;
+	text-align: center;
+}
+
+.result {
+	margin-bottom: 30px;
+	border-bottom: 2px solid grey;
+  text-align: left;
+}
+
+.result a, .result h3 {
+	text-decoration: none;
+	color: black;
+}
+
+.result a:visited {
+	color: red;
+}
+
+.result a:hover {
+	text-decoration: underline;
+	color: red;
+}
+
+.result h3 {
+	font-weight: 600;
+  font-size: 0.9rem;
+  text-decoration: inherit;
+  padding: 5px 5px 10px;
+}
+
+.result p {
+	font-size: 0.7rem;
+	overflow-wrap: break-word;
+  text-decoration: inherit;
+  padding: 5px 5px 10px;
+}
+
+.result img {
+	width: 100%;
+}
+
+.no-underline {
+	text-decoration: none;
 }
 
 .hidden {
@@ -154,6 +201,31 @@ footer {
 	}
 	body {
 		width: 80%;
+	}
+	h1 {
+		padding-top: 80px;
+	}
+	input {
+		font-size: 1.2rem;
+	} 
+	legend {
+	  font-size: 1.4rem;
+	}
+	button {
+	  font-size: 1.3rem;
+	}
+	footer {
+	font-size: 0.75rem;
+	}
+	.results {
+		margin-top: 50px;
+	}
+		.result h3 {
+	  font-size: 1.2rem;
+	}
+
+	.result p {
+		font-size: 1.0rem;
 	}
 }
 
