--- a/main.css
+++ b/main.css
@@ -181,6 +181,7 @@ footer {
   text-decoration: inherit;
   padding: 5px 5px 10px;
   border-bottom: 2px solid grey;
+  margin-bottom: 10px;
 }
 
 .result img {
