additional changes to css

--- a/main.css
+++ b/main.css
@@ -180,7 +180,7 @@ footer {
 	overflow-wrap: break-word;
   text-decoration: inherit;
   padding: 5px 5px 10px;
-  border-bottom: 2px solid grey;
+  border-bottom: 2px solid red;
   margin-bottom: 20px;
 }
 
