--- a/main.css
+++ b/main.css
@@ -146,6 +146,10 @@ legend {
 	padding: 10px;
 }
 
+nav {
+	display: none;
+}
+
 footer {
 	font-size: 0.45rem;
   text-align: center;
@@ -253,7 +257,7 @@ p.channel-link {
 	margin-right: auto;
 	margin-left: auto;
 	width: 29%;
-	display: none;
+	display: block;
 	text-align: center;
 	text-decoration: none;
 	color: black;
